# dipha

./: CMakeLists.txt  ProjectHome.md  README  README.md
branches/sparse_rips/: README
branches/sparse_rips/include/dipha/: file_types.h  globals.h  includes.h  mpi_utils.h
branches/sparse_rips/include/dipha/algorithms/: reduction_kernel.h
branches/sparse_rips/matlab/: save_extrinsic_full_rips_complex.m  save_intrinsic_full_rips_complex.m
branches/sparse_rips/src/: dipha.cpp
include/dipha/: element_distribution.h  file_types.h  globals.h  includes.h  macros.h  mpi_utils.h
include/dipha/algorithms/: compute_reduced_columns.h  dualize.h  dualize_explicit_complex.h  generate_unreduced_columns.h  get_cell_to_filtration_map.h  get_filtration_to_cell_map.h  reduction_kernel.h
include/dipha/data_structures/: distributed_vector.h  flat_column_stack.h  heap_column.h  write_once_array_of_arrays.h  write_once_column_array.h
include/dipha/inputs/: abstract_weighted_cell_complex.h  full_rips_complex.h  sparse_rips_complex.h  weighted_cubical_complex.h  weighted_explicit_complex.h
include/dipha/outputs/: save_persistence_diagram.h
matlab/: create_noise_image_data.m  create_noisy_ramp_image_data.m  create_sphere.m  create_sphere_extrinsic_full_rips_data.m  create_sphere_extrinsic_rips_data.m  create_sphere_intrinsic_full_rips_data.m  create_sphere_intrinsic_sparse_rips_data.m  plot_midlife_persistence_diagram.m  plot_persistence_diagram.m  save_distance_matrix.m  save_extrinsic_full_rips_complex.m  save_extrinsic_sparse_rips_complex.m
regression_data/: cubical.diagram  extrinsic_full_rips.complex
src/: create_phat_filtration.cpp  dipha.cpp  dualize.cpp  full_to_sparse_distance_matrix.cpp  regression_test.cpp
tags/dipha-1.0.0/: CMakeLists.txt  README
tags/dipha-1.0.0/include/dipha/: element_distribution.h  file_types.h  macros.h
tags/dipha-1.0.0/include/dipha/algorithms/: generate_unreduced_columns.h  get_cell_to_filtration_map.h  get_filtration_to_cell_map.h
tags/dipha-1.0.0/include/dipha/data_structures/: distributed_vector.h
tags/dipha-1.0.0/include/dipha/inputs/: abstract_weighted_cell_complex.h  full_rips_complex.h  weighted_cubical_complex.h  weighted_explicit_complex.h
tags/dipha-1.0.0/include/psort-1.0/src/: psort_splitters.h  psort_util.h
tags/dipha-1.0.0/matlab/: create_noisy_ramp_image_data.m  load_persistence_diagram.m  plot_persistence_diagram.m  plot_persistence_diagram_density.m
tags/dipha-1.0.0/regression_data/: cubical.complex
tags/dipha-1.0.0/src/: dualize.cpp
tags/dipha-1.0.0/tests/: test_distributed_sort.cpp
tags/dipha-1.0/include/dipha/: includes.h
tags/dipha-1.0/include/dipha/algorithms/: dualize_explicit_complex.h
tags/dipha-1.0/include/dipha/data_structures/: flat_column_stack.h  write_once_array_of_arrays.h
tags/dipha-1.0/include/dipha/outputs/: save_persistence_diagram.h
tags/dipha-1.0/include/psort-1.0/src/: psort_merge.h
tags/dipha-2.0.0/: CMakeLists.txt  README
tags/dipha-2.0.0/include/dipha/: includes.h
tags/dipha-2.0.0/include/dipha/algorithms/: compute_reduced_columns.h  dualize_explicit_complex.h  reduction_kernel.h
tags/dipha-2.0.0/matlab/: create_noise_image_data.m  create_ramp_image_data.m  create_smooth_image_data.m  create_sphere.m
tags/dipha-2.0.0/test_data/: noise_3_16.complex  primal_explicit.complex  sphere_1_0.3.diagram
tags/dipha-2.1.0/include/dipha/: file_types.h  mpi_utils.h
tags/dipha-2.1.0/matlab/: create_sphere.m  plot_persistence_diagram.m
tags/dipha-2.1.0/src/: create_phat_filtration.cpp
tags/dipha-2.1.0/test_data/: noise_3_16_def_def.diagram  ramp_3_16.complex
test_data/: cubical.diagram  extrinsic_sparse_rips.complex  extrinsic_sparse_rips_large_threshold.diagram  intrinsic_sparse_rips.diagram  intrinsic_sparse_rips_large_threshold.diagram  ramp_4_8.complex  ramp_4_8_def_def.diagram  smooth_16.complex  smooth_1_-1.diagram  smooth_2.diagram  smooth_def.diagram  smooth_def_5.diagram  sphere_1.diagram  sphere_2.diagram  sphere_3.diagram  sphere_3_0.8.diagram  sphere_3_32.complex  sphere_3_32_0.5.complex  sphere_3_32_0.8.complex
tests/: test_dual_intrinsic_full_rips.cpp  test_externals.h  test_primal_cubical.cpp  test_primal_explicit.cpp  test_primal_extrinsic_full_rips.cpp  test_primal_intrinsic_full_rips.cpp  unit_tests.cpp
trunk/: CMakeLists.txt
trunk/include/dipha/: file_types.h  mpi_utils.h
trunk/include/dipha/algorithms/: compute_reduced_columns.h
trunk/include/dipha/data_structures/: flat_column_stack.h
trunk/include/dipha/inputs/: abstract_weighted_cell_complex.h  full_rips_complex.h  sparse_rips_complex.h  weighted_cubical_complex.h  weighted_explicit_complex.h
trunk/include/dipha/outputs/: save_persistence_diagram.h
trunk/include/psort-1.0/src/: psort_alltoall.h
trunk/matlab/: create_noise_image_data.m  create_noisy_ramp_image_data.m  create_ramp_image_data.m  create_smooth_image_data.m  create_sphere.m  create_sphere_embedded_rips_data.m  create_sphere_extrinsic_rips_data.m  create_sphere_extrinsic_sparse_rips_data.m  create_sphere_intrinsic_full_rips_data.m  create_sphere_intrinsic_rips_data.m  plot_persistence_diagram.m  save_image_data.m  save_intrinsic_sparse_rips_complex.m  save_weighted_cubical_complex.m  save_weighted_triangle_surface.m
trunk/regression_data/: extrinsic_full_rips.diagram  intrinsic_full_rips.diagram
trunk/src/: create_phat_filtration.cpp  dipha.cpp  dualize.cpp
trunk/test_data/: dual_explicit.complex  explicit.diagram  extrinsic_full_rips.diagram  extrinsic_sparse_rips.diagram  extrinsic_sparse_rips_large_threshold.complex  extrinsic_sparse_rips_large_threshold.diagram  intrinsic_full_rips.complex  intrinsic_full_rips.diagram  intrinsic_sparse_rips.complex  intrinsic_sparse_rips_large_threshold.complex  noise_4_8.complex  noise_4_8_def_def.diagram  smooth_1_-1.diagram  smooth_def_5.diagram  sphere_2_0.5.diagram  sphere_3_32_0.3.complex  sphere_3_32_2.complex
trunk/tests/: run_mpi_gtest.cpp  test_dual_cubical.cpp  test_dual_explicit.cpp  test_dual_extrinsic_full_rips.cpp  test_dualize.cpp  unit_tests.cpp
(+8 files in other folders)
